kubernetes/image-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-search-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-search
  template:
    metadata:
      labels:
        app: image-search
    spec:
      containers:
        - name: image-search-container
          image: vectornguyen76/image-search-engine:latest
          imagePullPolicy: Always
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 7000
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
          ports:
            - containerPort: 7000
