kubernetes/text-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-search-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: text-search
  template:
    metadata:
      labels:
        app: text-search
    spec:
      containers:
        - name: text-search-container
          image: vectornguyen76/text-search-engine:latest
