kubernetes/image-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-search-service
spec:
  selector:
    app: image-search
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
