kubernetes/text-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-search-service
spec:
  selector:
    app: text-search
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
